test/assets/invalid/signatures/wrong-monad-unit-child.hs
a = do
    Just 1
a :: Maybe ()
-- Order reversed for test purposes only